@@ -153,6 +153,18 @@ my @Main_List = ();
 my $flag = "";
 my $order ="";
 my $add = 1;
+# merge usr menu
+my $mergeUserMenu = 0;
+my $mergeDir = "";
+my $mergeUserDir = "";
+my $sysDir = "";
+my $mergeDirType = "";
+my $userMenuDone = 0;
+# check icons
+my $checkIcons = "";
+my $checkMiniIcons = "";
+my @checkIconsPath = ();
+my @checkMiniIconsPath = ();
 
 #--------
 # Read the options
@@ -192,6 +204,9 @@ GetOptions(
 	"check-app!"               => \$CHECK,
 	"wm-icons"                 => \$wmIcons,
 	"time-limit=s"             => \$timelimit,
+	"merge-user-menu"          => \$mergeUserMenu,
+	"check-mini-icon=s"        => \$checkMiniIcons,
+	"check-icons=s"            => \$checkIcons,
 ) || wrongUsage();
 wrongUsage() if @ARGV;
 
@@ -232,6 +247,10 @@ if ( $MENU_TYPE eq 'gtk' ) {
 		|| $MENU_DESTROY =~ /^d/) );
 }
 
+if ( $MENU_NAME eq 'gnome-sys' && $mergeUserMenu) {
+		$mergeUserDir = "$ENV{HOME}/.gnome/apps";
+}
+
 if ( $MENU_NAME eq 'gnome-user' ) {
 	$APPS_DIR   = "$ENV{HOME}/.gnome/apps";
 	$MENU_TITLE = 'Gnome User Menu';
@@ -251,6 +270,9 @@ if ( $DESKTOP eq 'Kde' && $KDE_PREFIX eq '' && $DESC_DIR eq '') {
 if ( $MENU_NAME eq 'kde-sys' ) {
 	$APPS_DIR   = $KDE_APPS;
 	$MENU_TITLE = 'Kde System Menu';
+	if ($mergeUserMenu) {
+		$mergeUserDir = "$ENV{HOME}/.kde/share/applnk";
+	}
 }
 
 if ( $MENU_NAME eq 'kde-user' ) {
@@ -390,6 +412,13 @@ if ( $STYLE ) {
 
 }
 
+if ($checkMiniIcons ne "") {
+	@checkMiniIconsPath = split(":",$checkMiniIcons);
+}
+if ($checkIcons ne "") {
+	@checkIconsPath = split(":",$checkIcons);
+}
+
 #----------------
 # LANG init for UTF-8
 if ($UTF8) {
@@ -399,7 +428,7 @@ if ($UTF8) {
 	} else {
 		my $l = substr($LANG,0,2);
 		# latin-1: not sure that all these lang are "latin1"!
-		$UTF8_TR = '$label =~ tr/\0-\x{ff}//UC'
+		$UTF8_TR = '$tmpLabel =~ tr/\0-\x{ff}//UC'
 			if " ca de es it fr gl hu is lt nl no pt sv " =~ / $l /;
 	}
 }
@@ -408,13 +437,13 @@ if ($UNICONV ne "") {
 	if ($UNICONV_EXEC eq "iconv") {
 		die "iconv not found in your path\n" 
 			unless check_app("iconv");
-		$UTF8_TR = "open(U,\"echo '\$label' | iconv -f UTF8 -t $UNICONV |\"); "
-			. "while(<U>) {chomp; \$label = \$_}; close(U)";
+		$UTF8_TR = "open(U,\"echo '\$tmpLabel' | iconv -f UTF8 -t $UNICONV |\"); "
+			. "while(<U>) {chomp; \$tmpLabel = \$_}; close(U)";
 	} elsif ($UNICONV_EXEC eq "uniconv") {
 		die "uniconv not found in your path\n" 
 			unless check_app("uniconv");
-		$UTF8_TR = "open(U,\"echo '\$label' | uniconv -I UTF8 -O $UNICONV |\");"
-			. " while(<U>) {chomp; \$label = \$_}; close(U)";	
+		$UTF8_TR = "open(U,\"echo '\$tmpLabel' | uniconv -I UTF8 -O $UNICONV |\");"
+			. " while(<U>) {chomp; \$tmpLabel = \$_}; close(U)";	
 	} else {
 		die "--uniconv argument must be iconv or uniconv\n";
 	}
@@ -425,7 +454,13 @@ if ($UNICONV ne "") {
 # "Main" variable: contains the directories to look at.
 # + is the "level" separator, the menu is builded level by level
 # with a double loop
-@Rec_Dir_List = ("$APPS_DIR", "+");
+if ($mergeUserMenu && -d $mergeUserDir) {
+	@Rec_Dir_List = ("$mergeUserDir","+");
+} else {
+	@Rec_Dir_List = ("$APPS_DIR", "+");
+	$userMenuDone = 1;
+	$mergeUserMenu = 0;
+}
 
 # init level
 # what is the function count("/", $dir) ?
@@ -437,7 +472,7 @@ while ( $cdir =~ /\// ) {
 }
 $top_level = $level;
 $nlevel = $level +1;		# next level
-
+my $isTopLevel = 1;
 
 #---------------------------------
 # Main loop (double loop)
@@ -449,6 +484,18 @@ while( $Rec_Dir_List[0] ne '+') {
 		$dir = $Rec_Dir_List[0]; # current working directory
 		@Main_List=();	# will contain the list of the file and dir
 		#               # of $dir (in good order)
+		my $hidden = 0;
+		my @newList = ();
+		my @newDirList = ();
+
+		if ($mergeUserMenu) {
+			$mergeDir = $dir;
+			$sysDir = $dir;
+			$mergeDir =~ s#^$APPS_DIR#$mergeUserDir#;
+			$sysDir =~ s#^$mergeUserDir#$APPS_DIR#;
+			if ("$sysDir" eq "$dir") { $mergeDirType = "s"; }
+			else { $mergeDirType = "u"; }
+		}
 
 		#--------
 		# Construct the Main_List:
@@ -462,61 +509,142 @@ while( $Rec_Dir_List[0] ne '+') {
 		# for gnome
 		if ( -f "$dir/.order" ) {
 			open(ORDER, "$dir/.order") || print STDERR
-			"fvwm-menu-desktop: Can't open $dir/.directory (not a fatal error, "
-			. "but this is curious, is your administrator paranoid?): $!\n";
-
+			"fvwm-menu-desktop: Can't open $dir/.order: $!\n";
 			while( defined ($name = <ORDER>)) {
 				chomp($name);
-				push(@Main_List, "$dir/$name");
+				push(@newList, "$dir/$name");
 			}
-
 			close(ORDER);
 		}
 
 		# for kde
-		if ( -f "$dir/.directory" ) {
-			open(ORDER, "$dir/.directory") || print STDERR
-			"fvwm-menu-desktop: Can't open $dir/.directory (not a fatal error, "
-			. "but this is curious, is your administrator paranoid?): $!\n";
-
+		# see if the user has over read the systeme .directory:
+		if ("$mergeDirType" eq "s" && -f "$mergeDir/.directory") {
+			open(ORDER, "$mergeDir/.directory") || print STDERR
+			"fvwm-menu-desktop: Can't open $mergeDir/.directory: $!\n";
 			while(<ORDER>) {
+				$hidden = 1 if /^hidden=true/i;
 				if ( /^SortOrder=(.*)$/ ) {
+					@newList = ();
 					$order = "$1";
 					@list = split(/\s*,\s*/, "$order");
-					foreach $name (@list) { push(@Main_List, "$dir/$name") }
+					foreach $name (@list) {
+						next if -f "$mergeDir/$name" && isHidden("$mergeDir/$name");
+						push(@newList, "$dir/$name"); 
+					}
 				}
 			}
-
+			close(ORDER);
+		} elsif ( -f "$dir/.directory" ) {
+			open(ORDER, "$dir/.directory") || print STDERR
+			"fvwm-menu-desktop: Can't open $dir/.directory: $!\n";
+			while(<ORDER>) {
+				$hidden = 1 if /^hidden=true/i;
+				if ( /^SortOrder=(.*)$/ ) {
+					@newList = ();
+					$order = "$1";
+					@list = split(/\s*[,;]\s*/, "$order");
+					foreach $name (@list) {
+						next if $mergeUserMenu && -f "$mergeDir/$name" && 
+						  isHidden("$mergeDir/$name");
+						push(@newList, "$dir/$name"); 
+					}
+				}
+			}
 			close(ORDER);
 		}
+		@newList = () if $hidden;
 
 		# 2. Add to @Main_List the items not in the order.
 		# AND WE UPDATE @Rec_Dir_List HERE
-		@list = @Main_List;
-		opendir(DIR,"$dir");
-		foreach $name (readdir(DIR)) {
-			next if $name =~ /^\./;
-			$add=1;
-			if ( -d "$dir/$name" ) { push(@Rec_Dir_List, "$dir/$name") }
-			foreach $j  (@list) {
-				$add=0 if ("$dir/$name" eq "$j");
+		@list = @newList;
+		# a system submenu has a submenu in the user menu:
+		if ($mergeDirType eq "s" && ! -d $dir && -d $mergeDir) {
+			opendir(DIR,"$mergeDir");
+			foreach $name (readdir(DIR)) {
+				next if $name =~ /^\./;
+				if (-d "$mergeDir/$name") {
+					next if -f "$mergeDir/$name/.directory" && 
+					  isHidden("$mergeDir/$name/.directory");
+					push(@newDirList, "$dir/$name");
+				}
+				$add = 1;
+				foreach $j (@list) { $add=0 if "$dir/$name" eq "$j"; }
+				push(@newList, "$dir/$name") if $add ;
 			}
-			push(@Main_List, "$dir/$name") if ( $add );
+			close(DIR);
 		}
-		close(DIR);
 
+		if (-d $dir) {
+			opendir(DIR,"$dir");
+			foreach $name (readdir(DIR)) {
+				next if $name =~ /^\./;
+				if ( -d "$dir/$name" ) {
+					if ($mergeDirType eq "s" && -f "$mergeDir/$name/.directory") {
+						next if isHidden("$mergeDir/$name/.directory");
+					}
+					elsif ($mergeDirType eq "u" && -d "$sysDir/$name") {
+						next;
+					}
+					elsif ( -f "$dir/$name/.directory") {
+						next if isHidden("$dir/$name/.directory");
+					}
+					push(@newDirList, "$dir/$name");
+				} elsif ($mergeDirType eq "s" && -f "$mergeDir/$name") {
+					next if isHidden("$mergeDir/$name");
+				}
+				$add = 1;
+				foreach $j  (@list) {
+					$add=0 if ("$dir/$name" eq "$j");
+				}
+				push(@newList, "$dir/$name") if $add;
+			}
+			close(DIR);
+		}
+		# added user entries in a "system" submenu
+		if ($mergeDirType eq "s" && -d "$mergeDir") {
+			@list = @newList;
+			opendir(DIR,"$mergeDir");
+			foreach $name (readdir(DIR)) {
+				next if $name =~ /^\./;
+				next if -d "$dir/$name" || -f "$dir/$name";
+				next if "$dir" eq "$APPS_DIR";
+				if (-d "$mergeDir/$name") {
+					push(@newDirList, "$dir/$name") if -d "$mergeDir/$name";
+				} elsif (-f "$mergeDir/$name") {
+					next if isHidden("$mergeDir/$name");
+				}
+				$add = 1;
+				foreach $j (@list) {
+					$add=0 if ("$dir/$name" eq "$j");
+				}
+				push(@newList, "$dir/$name") if $add;
+			}
+			close(DIR);
+		}
+ 
 		# ---------
 		# Build the menu of $dir
-		build_a_level();
+		if (!$hidden) {
+			push @Rec_Dir_List, @newDirList;
+			push @Main_List, @newList;
+			build_a_level();
+		}
 
 		shift(@Rec_Dir_List);
 	}
 
 	# next level
+	$isTopLevel = 0;
 	$level = $nlevel;
 	++$nlevel;
 	shift @Rec_Dir_List;	# push out the "+"
 	push( @Rec_Dir_List, '+' );	# add a level separator
+	if ($mergeUserMenu && $Rec_Dir_List[0] eq '+' && !$userMenuDone) {
+		$userMenuDone = 1;
+		$isTopLevel = 1;
+		@Rec_Dir_List = ("$APPS_DIR", "+");
+	}
 	# @Rec_Dir_List = (+) => END
 }
 
@@ -534,6 +662,7 @@ if ($MENU_STYLE ne "") {
 #----------------------------------------------------------------------------
 #----------------------------------------------------------------------------
 # Subroutines:
+#     isHidden
 #     up_directory
 #     build_a_level (build a (sub)Menu)
 #     get_info (Read Desktop hints, compute icons)
@@ -542,6 +671,19 @@ if ($MENU_STYLE ne "") {
 #
 #----------------------------------------------------------------------------
 #----------------------------------------------------------------------------
+# 
+sub isHidden {
+	my $file = shift;
+	my $return = 0;
+
+	return 0 if ! -f $file;
+	open(ISHIDDEN, "$file") || print STDERR
+	  "fvwm-menu-desktop: Can't open $mergeDir/$file";
+	while(<ISHIDDEN>) { $return = 1 if /^hidden=true/i; }
+	close(ISHIDDEN);
+	return $return;
+}
+
 # Compute cd ..
 sub up_directory {
 	my($dir) = @_;
@@ -565,50 +707,58 @@ sub build_a_level {
 
 
 	# Head of the menu
-
-	if ( $level == $top_level ) {
-
+#	if ( $level == $top_level ) {
+	if ($isTopLevel) {
 		$mini_icon = $dmicon{$flag .'toptitle'};
 		$name = $MENU_NAME;
-		($label, $mini_icon) = get_info("$APPS_DIR/.directory", 'toptitle')
-			if ( -r "$dir/.directory" );
+		if ($mergeDirType eq "s" && -r "$mergeDir/.directory") {
+			($label, $mini_icon) = get_info("$mergeDir/.directory", 'toptitle')
+		}
+		if (-r "$dir/.directory") {
+			($label, $mini_icon) = get_info("$APPS_DIR/.directory", 'toptitle')
+		}
 		if ( $label eq '' || $OPT_MENU_TITLE ne '') { $label = $MENU_TITLE }
 		else { $label = "$DESKTOP $label" }
 		$titletype = 'toptitle';
-
 	} else {
-
 		$tmp_name = substr($dir,rindex ($dir,'/')+1);
 		$name = "$SUBMENUS_PREFIX$tmp_name-$level";
-		if ( -r "$dir/.directory" ) {
+		$mini_icon = $dmicon{$flag . 'title'};
+		if ($mergeDirType eq "s" && -r "$mergeDir/.directory") {
+			($label, $mini_icon) = get_info("$mergeDir/.directory", 'title');
+		}
+		if (-r "$dir/.directory") {
 			($label, $mini_icon) = get_info("$dir/.directory", 'title');
-		} else {
-#			print STDERR "fvwm-menu-desktop: Bad menu description, expected $dir\n";
-			$mini_icon = $dmicon{$flag . 'title'};
 		}
 		$label = $tmp_name if ( $label eq '');
 		$titletype = 'title';
 	}
 
 	# Now we can print the Head of the (sub)menu
-	if ( $flag eq 'gtk_' ) {
-
-		printModuleConfig qq(Destroy "$name")
-			if ( $level == $top_level && $MENU_DESTROY =~ /^y/ );
-		printModuleConfig qq(Menu "$name"),
+	if (!($isTopLevel && $mergeUserMenu && $userMenuDone)) {
+		if ( $flag eq 'gtk_' ) {
+			printModuleConfig qq(Destroy "$name")
+			  if ( $level == $top_level && $MENU_DESTROY =~ /^y/ );
+			printModuleConfig qq(Menu "$name"),
 			qq(Title "$label" $mini_icon),
 			qq(Separator);
-
-	} else {
-
-		if ( $level != $top_level || $MENU_DESTROY =~ /^y/ ) {
-			print "DestroyMenu \"$name\"\n";
-		} elsif ( $MENU_DESTROY =~ /^d/ ) {
-			print "DestroyMenu recreate \"$name\"\n";
+		} else {
+		#		if ( $level != $top_level || $MENU_DESTROY =~ /^y/ ) {
+			if ( (!$isTopLevel || $MENU_DESTROY =~ /^y/) ) {
+				print "DestroyMenu \"$name\"\n";
+			} elsif ( $MENU_DESTROY =~ /^d/ ) {
+				print "DestroyMenu recreate \"$name\"\n";
+			}
+			print "AddToMenu \"$name$spic{\"$flag$titletype\"}" .
+			  "$scolor{\"$flag$titletype\"}\" \"$label$mini_icon\" Title\n";
+			push @menusForStyle, $name;
 		}
-		print "AddToMenu \"$name$spic{\"$flag$titletype\"}" .
-			"$scolor{\"$flag$titletype\"}\" \"$label$mini_icon\" Title\n";
-		push @menusForStyle, $name;
+	} else {
+		if ( $flag eq 'gtk_' ) {
+			printModuleConfig qq(Menu "$name");
+		} else {
+			print "AddToMenu \"$name\" \n";
+		}
 	}
 
 	# Items of the menu
@@ -618,17 +768,23 @@ sub build_a_level {
 		if ( time - $startime >= $timelimit ) {
 			die "fvwm-menu-desktop runs longer than time-limit; dying (see the man page)\n";
 		}
-
+		$label = '';
 		$tmp_name = substr($item,rindex ($item,'/')+1);
+
+		my $itemDD = "$item/.directory";
+		if ($mergeDirType eq "s" && -r "$mergeDir/$tmp_name") {
+			$item = "$mergeDir/$tmp_name";
+			$itemDD = "$item/.directory" if -r "$item/.directory";
+		}
 
 		# If it is a dir --> a pop up (folder)
 		if ( -d "$item" ) {
 			$name = "$SUBMENUS_PREFIX$tmp_name-$nlevel";
-			($label, $mini_icon) = get_info("$item/.directory", 'folder')
-				if (-r "$item/.directory");
+			($label, $mini_icon) = get_info("$itemDD", 'folder')
+				if (-r "$itemDD");
 			$label= $tmp_name if ( $label eq "");
 			if ( $flag eq 'gtk_' ) {
-				printModuleConfig qq(Destroy $name),
+				printModuleConfig qq(Destroy "$name"),
 					qq(SubMenu "$label" "$name" $mini_icon);
 			} else {
 				print "+ \"$label$mini_icon\" Popup \"$name\"\n";
@@ -636,14 +792,15 @@ sub build_a_level {
 		}
 
 		# a file --> application
+		$exec = '';
 		if (-r $item ) {
 			($name, $mini_icon, $exec) = get_info($item, 'app');
-			if ( $exec ne '' ) {
-				if ( $flag  eq 'gtk_' ) {
-					printModuleConfig qq(Item "$name" "Exec exec $exec" $mini_icon);
-				} else {
-					print "+ \"$name$mini_icon\" Exec exec $exec\n";
-				}
+		}
+		if ( $exec ne '' ) {
+			if ( $flag  eq 'gtk_' ) {
+				printModuleConfig qq(Item "$name" "Exec exec $exec" $mini_icon);
+			} else {
+				print "+ \"$name$mini_icon\" Exec exec $exec\n";
 			}
 		}
 
@@ -675,42 +832,61 @@ sub get_info {
 	open(DESC,$file) || die "fvwm-menu-desktop: can't open $file: $!";
 	while(<DESC>) {
 
-		if ( /^Name\[$LANG\]=(.*)$/ ) { 
+		if ( /^Name\[$LANG.*\]\s*=\s*(.*)$/ ) { 
 			$label = $1;
 			if ($UTF8) {
-				if ($UTF8_TR ne "") { eval $UTF8_TR; } 
+				my $tmpLabel = $label;
+				if ($UTF8_TR ne "") { eval $UTF8_TR; $label = $tmpLabel } 
 				else { $label = ""; }
 			}
 			#$label =~ s/%/%%/g;
 			#$label =~ s/&/&&/g;
 			#$label =~ s/\*/\*\*/g;
+			next;
 		}
 
-		if (/^Name=(.*)$/) { $deflabel = $1 }
+		if (/^Name\s*=\s*(.*)$/) {
+			$deflabel = $1;
+			if ($UTF8) {
+				my $tmpLabel = $deflabel;
+				# needed for user menu!
+				if ($UTF8_TR ne "") { eval $UTF8_TR; $deflabel = $tmpLabel } 
+			}
+			next;
+		}
 
-		if ( /^Exec=((\S*).*$)/ ) {
+		if ( /^Exec\s*=\s*((\S*).*$)/ ) {
 			$exec = $1;
 			$exec_exec = $2;
+			next;
 		}
 
-		$term = 1 if (/^Terminal=1/);
+		if (/^Terminal\s*=\s*1/) {
+			$term = 1;
+			next;
+		}
 
-		if ( /^Icon=(.*)$/ ) { $icon = substr($1,rindex($1,'/')+1) }
+		if ( /^Icon=(.*)$/ ) { 
+			$icon = substr($1,rindex($1,'/')+1);
+			next;
+		}
 
 		# kde gives sometimes a mini-icon hint
-		if ( /^MiniIcon=(.*)$/ ) { $mini_icon = substr($1,rindex($1,'/')+1) }
-
-		# kde2 give just the name of the icons and use png icons
-		# try a more general fix.
-		my $tmp = "xpm";
-		$tmp = "png" if $TRAN || $MENU_TYPE eq "gtk";
-		$icon = "$icon.$tmp" if $icon !~ /\....$/ && $icon ne '';
-		$mini_icon = "$mini_icon.$tmp" 
-			if $mini_icon !~ /\....$/ && $mini_icon ne '';
-		#print STDERR "$icon,$mini_icon\n";
+		if ( /^MiniIcon=(.*)$/ ) { 
+			$mini_icon = substr($1,rindex($1,'/')+1);
+			next;
+		}
 	}
-
+	
 	close(DESC);
+	# kde2 give just the name of the icons and use png icons
+	# try a more general fix.
+   my $tmp = "xpm";
+	$tmp = "png" if $TRAN || $MENU_TYPE eq "gtk";
+	$icon = "$icon.$tmp" if $icon !~ /\....$/ && $icon ne '';
+	$mini_icon = "$mini_icon.$tmp" 
+	  if $mini_icon !~ /\....$/ && $mini_icon ne '';
+	#print STDERR "$icon,$mini_icon\n";
 
 	#----------------------
 	# See which info we get
@@ -741,7 +917,6 @@ sub get_info {
 			$icon = "$exec_exec.xpm"
 				if ( -f "$KDE_ICONS$exec_exec.xpm" );
 		}
-
 	}
 
 	#----------------------------
@@ -776,6 +951,23 @@ sub get_info {
 	# no .png icons with fvwm menu
 	$mini_icon = '' if ( $flag eq 'fvwm_' && $mini_icon =~ /\.png$/ );
 
+	if ($checkMiniIcons ne "" && $mini_icon ne "") {
+		my $ok = 0;
+		my $d;
+		foreach $d (@checkMiniIconsPath) {
+			$ok = 1 if -f "$d/mini_icon";
+		}
+		$mini_icon = "" if !$ok;
+	}
+	if ($checkIcons ne "" && $icon ne "") {
+		my $ok = 0;
+		my $d;
+		foreach $d (@checkIconsPath) {
+			$ok = 1 if -f "$d/icon";
+		}
+		$icon = "" if !$ok;
+	}
+
 	# Ok the icons are computed except the path.
 
 	# Style
@@ -804,7 +996,6 @@ sub get_info {
 		else { $mini_icon =  "$MINI_ICONS_DIR$mini_icon" }
 	}
 
-
 	#return the info with icon
 
 	return($label, $dmicon{$flag . $which}, $exec)
@@ -817,9 +1008,8 @@ sub get_info {
 		if ($flag eq 'gtk_');
 
 	return($label,
-		"$place{\"$flag$which\"}$mini_icon$place{\"$flag$which\"}",
-		$exec)
-		if ( $mini_icon ne '' );
+			 "$place{\"$flag$which\"}$mini_icon$place{\"$flag$which\"}",$exec)
+	if $mini_icon ne '';
 
 	return($label, '', $exec);
 }
@@ -921,6 +1111,7 @@ Options:
 	--fvwmgtk-alias NAME      FvwmGtk module name, default is FvwmGtk
 	--title NAME              menu title, default depends on --desktop
 	--name NAME               menu name, default depends on --desktop
+   --merge-user-menu         merge the system menu with the user menu
 	--enable-mini-icons       enable mini-icons in menu
 	--enable-tran-mini-icons  enable mini-icons in menu and
 		translation of foo.png icon names to foo.xpm
@@ -928,6 +1119,7 @@ Options:
 		ImagePath), default is 'mini/'
 	--png-icons-path DIR      path of .png icons, default is your ImagePath
 	--tran-mini-icons-path DIR      path of menus icons for translation
+   --check-mini-icons PATH   check if the mini icons are in PATH
 	--icon-toptitle micon:law:place:sidepic:color  mini-icon for the top
 		 title and sidepic for the top menu
 	--icon-title micon:law:place:sidepic:color     as above for sub menus
@@ -940,6 +1132,7 @@ Options:
 	--icons-path DIR          define the directory of the icons,
 		the default is very good
 	--tran-icons-path DIR     similar to the above option.
+   --check-icons PATH        check if the icons are in the PATH
 	--submenu-name-prefix NAME      in general not useful
 	--dir DIR                 use path as desktop menu description
 	--destroy-type FLAG       how to destroy menu, valid values:
